--- a/dev/sass/media/m.sass
+++ b/dev/sass/media/m.sass
@@ -309,9 +309,9 @@
 				+wh(2px,14px)
 				margin-bottom: 1px
 				background: rgba(151, 151, 151, 0.3)
-			&-one
+			&:nth-child(2)
 				margin-left: 9px
-			&-three
+			&:last-child
 				margin-right: 9px
 	.bar
 		+wh(24px)
