--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -24,6 +24,33 @@ block content
 					span.yes Answer
 					span.answer Parking lot clean?
 					span.no None
+			.category
+				.category-block.unanswered
+					h5.category-title Unanswered
+					ul.category-list
+						li.category-item
+							a(href='#').category-link Parking lot clean?
+						li.category-item
+							a(href='#').category-link Parking lot clean?
+						li.category-item
+							a(href='#').category-link Parking lot clean?
+						li.category-item
+							a(href='#').category-link Parking lot clean?
+						li.category-item
+							a(href='#').category-link Parking lot clean?
+				.category-block.answered
+					h5.category-title Answered
+					ul.category-list
+						li.category-item
+							a(href='#').category-link Parking lot clean?
+						li.category-item
+							a(href='#').category-link Parking lot clean?
+						li.category-item
+							a(href='#').category-link Parking lot clean?
+						li.category-item
+							a(href='#').category-link Parking lot clean?
+						li.category-item
+							a(href='#').category-link Parking lot clean?
 			.bottom-block
 				button.bottom-input
 					span Section & Category
@@ -93,7 +120,7 @@ block content
 				.tellToUs-fail
 					+img('failure.svg')
 					span Failure!
-			form.popup.tellToUs.active
+			form.popup.tellToUs
 				//.fail.success
 				.popup-title.tellToUs-title
 					span Tell, why “NO”
